--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </a>
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+      <h2>Nuevo branch</h2>
     </button>
   </div>
 </body>
